<resources>
    <string name="app_name">曜日計算機</string>
    <string name="戻る">戻る</string>
    <string name="年数を入力">年数を入力</string>
    <string name="月数を入力">月数を入力</string>
    <string name="日数を入力">日数を入力</string>
    <string name="年">年</string>
    <string name="月">月</string>
    <string name="日">日</string>
    <string name="曜日検索">曜日検索</string>
    <string name="現在からの日数検索">現在からの日数検索</string>
    <string name="announcement">年/月/日 を入力してください。</string>
</resources>