<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.DateCalculator.AppBarOverlay">
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/editText_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:ems="10"
        android:hint="@string/年数を入力"
        android:inputType="number"
        app:layout_anchor="@+id/editText_year"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:hint="@string/月数を入力"
        android:inputType="number"
        app:layout_anchor="@+id/editText_year"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="235dp"
        android:ems="10"
        android:hint="@string/日数を入力"
        android:inputType="number"
        app:layout_anchor="@+id/editText_year"
        android:autofillHints="" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_anchorGravity="bottom|center" />

    <TextView
        android:id="@+id/textView_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:textColor="#040000"
        android:layout_marginTop="100dp"
        android:text="@string/年"
        android:textSize="18sp"
        android:layout_marginStart="220dp" />

    <TextView
        android:id="@+id/textView_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:layout_marginLeft="220dp"
        android:text="@string/月"
        android:textColor="#040000"
        android:textSize="18sp"
        android:layout_marginStart="220dp" />

    <TextView
        android:id="@+id/textView_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="220dp"
        android:text="@string/日"
        android:textColor="#040000"
        android:textSize="18sp"
        android:layout_marginStart="220dp" />

    <Button
        android:id="@+id/button_weekday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="310dp"
        android:text="@string/曜日検索"
        android:textColor="#000000"
        app:backgroundTint="#FAFAFA"
        app:iconTint="#000000"
        app:layout_anchor="@+id/button_weekday"
        android:layout_marginStart="5dp" />

    <Button
        android:id="@+id/button_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="310dp"
        android:text="@string/現在からの日数検索"
        android:textColor="#000000"
        app:backgroundTint="#FAFAFA"
        app:iconTint="#000000"
        app:layout_anchor="@+id/button_days"
        android:layout_marginStart="120dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/announcement"
        android:layout_marginLeft="5dp"
        android:textColor="#000000"
        android:layout_marginStart="5dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>